--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: cd src && yarn --frozen-lockfile
     - run: cd src && yarn build
-    - uses: ncipollo/release-action@v1
+    - name: Release
+      uses: softprops/action-gh-release@v1
       with:
-        artifacts: "dist/*"
-        tag: "Test"
-        token: ${{ secrets.GITHUB_TOKEN }}
+        files: ".serverless/cloudfront-sg-lambda.zip"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
