--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,19 +26,10 @@ jobs:
     - name: Build
       run: cd src && yarn build
     - name: Release
-      # uses: svenstaro/upload-release-action@v2
-      # with:
-      #   asset_name: mything
-      #   file: .serverless/cloudfront-sg-lambda.zip
-      #   repo_token: ${{ secrets.GITHUB_TOKEN }}
-      #   tag: "Test"
-      #   overwrite: true
-      #   body: "This is my release text"
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        draft: true
         fail_on_unmatched_files: true
         files: "src/.serverless/cloudfront-sg-lambda.zip"
-        tag_name: "Test"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
