--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,12 @@
 {
   "name": "src",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
     "build": "shx rm -rf .serverless/ && serverless package --stage production",
     "postbuild": "shx rm -rf dist && shx mkdir dist && shx cp .serverless/cloudfront-sg-lambda.zip dist/",
+    "postversion": "git push --tags && git push && echo \"Successfully released version $npm_package_version!\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
